name:           resource
version:        0.1
synopsis:       A unification of bracket and ResourceT
license:        BSD3
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Control
cabal-version:  >= 1.6
homepage:       http://github.com/duairc/resource
bug-reports:    http://github.com/duairc/resource/issues
build-type:     Simple

extra-source-files:
  CONTRIBUTORS

Library
  hs-source-dirs:
    src

  exposed-modules:
    Control.Monad.Trans.Safe
    Data.Resource
    Data.Resource.Base
    Monad.Safe

  other-modules:
    Monad.Safe.Internal
    Data.Resource.Internal

  build-depends:
    base >= 4.3 && < 5,
    containers >= 0.4 && < 0.6,
    layers >= 0.2 && < 0.3,
    transformers >= 0.2 && < 0.4

  ghc-options:
    -Wall
