name:           resource
version:        0.1
synopsis:       A unification of bracket and ResourceT
license:        BSD3
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Control
cabal-version:  >= 1.6
homepage:       http://github.com/duairc/resource
bug-reports:    http://github.com/duairc/resource/issues
build-type:     Simple

extra-source-files:
  include/*.h
  CONTRIBUTORS

Library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Control.Monad.Trans.Safe
    Data.Resource
    Data.Resource.Base
    Monad.Safe

  other-modules:
    Monad.Safe.Internal
    Data.Resource.Internal

  build-depends:
    base >= 4.2 && < 5,
    containers >= 0.4 && < 0.6,
    layers >= 1.0 && < 1.1,
    mmorph >= 1.0 && < 1.2,
    transformers >= 0.2 && < 0.6

  ghc-options:
    -Wall

  if impl(ghc < 7)
    cpp-options: -DINLINABLE=INLINE

  if impl(ghc >= 7.2)
    cpp-options: -DSafeHaskell

  if impl(ghc >= 7.10)
    cpp-options: -DOverlapPragma -DOverlappingInstances=NoImplicitParams
